Update Catch2 to v3.3.2.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,7 +38,7 @@ if(BUILD_BLS_TESTS)
   FetchContent_Declare(
     Catch2
     GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-    GIT_TAG        v3.0.0-preview5
+    GIT_TAG        v3.3.2
   )
   FetchContent_MakeAvailable(Catch2)
   find_package(Threads REQUIRED)
