--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -69,7 +69,9 @@ jobs:
         python python-impl/impl-test.py
 
     - name: Install emsdk
-      uses: mymindstorm/setup-emsdk@v11
+      uses: mymindstorm/setup-emsdk@v12
+      with:
+        version: 3.1.36
 
     - name: Test javascript bindings
       run: |
