--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -3,7 +3,7 @@ name:  Build and Test C++, Javascript, and Python
 on:
   push:
     branches:
-      - main
+      - '**'
     tags:
       - '**'
   pull_request:
@@ -28,11 +28,19 @@ jobs:
           sudo apt-get install snap -y
           sudo snap install cmake --classic
           hash -r
-          cmake -B ../build -DCMAKE_BUILD_TYPE=Debug -DWITH_COVERAGE=1 -DBUILD_BLS_PYTHON_BINDINGS=0 -DBUILD_BLS_BENCHMARKS=0
+          cmake -B ../build -DCMAKE_BUILD_TYPE=Debug -DWITH_COVERAGE=1 -DBUILD_BLS_PYTHON_BINDINGS=1 -DBUILD_BLS_BENCHMARKS=0
           cmake --build ../build -- -j 6
           ../build/src/runtest
-          lcov --directory ../build --capture --output-file lcov.info
-          lcov --remove lcov.info '*_deps/*' '/usr/*' --output-file lcov.info
+          python -m venv venv
+          source venv/bin/activate
+          export PYTHONPATH=$PYTHONPATH:$(pwd)/../build/python-bindings
+          python python-bindings/test.py
+          pip install coverage
+          coverage run python-impl/impl-test.py
+          coverage lcov -o py_impl_cov.info
+          lcov --directory ../build --capture --output-file cpp_cov.info
+          lcov --remove cpp_cov.info '*_deps/*' '/usr/*' --output-file cpp_cov.info
+          lcov --add-tracefile cpp_cov.info -a py_impl_cov.info -o lcov.info
       - name: Upload to Coveralls
         uses: coverallsapp/github-action@v2
         if: always()
